# text-editor

./: README.md  pyproject.toml
tests/: test_buffer.py  test_ui.py
tests/ui/: test_cursor.py  test_editor.py
text_editor/: main.py
text_editor/core/: buffer.py
text_editor/ui/: cursor.py  editor.py
