[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.9.3",
    "pytest-qt>=4.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["text_editor"]

[tool.pytest.ini_options]
pythonpath = ["text_editor"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]


